# perspicuity_formula

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs
